Add all changes